--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[redirects]]
+  from = "/projects/namescripture/*"  
+  to = "https://namescriptures.netlify.app/:splat" 
+  status = 200
+  force = true 
